[package]
name = "tracker_emulation-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
firmware_protocol = { git = "https://github.com/JovannMC/SlimeVR-Rust", package = "firmware_protocol", branch = "more-packets" }
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["net", "time", "sync", "macros", "rt"] }
